# wattowa

./: .gitignore  Dockerfile  README.md  build_up.sh  check_env.sh  check_stack.sh  clean.sh  docker-compose.yml  env.example  ingest.sh  ps.sh  pyproject.toml
app/: main.py
