[project]
name = "wattowa"
version = "0.1.0"
description = "TV Guide Recommender API using vector embeddings"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.5",
    "qdrant-client==1.9.2",
    "sentence-transformers==3.0.1",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "orjson==3.10.7",
    "python-dateutil==2.9.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

